10-atlassian/crowd/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  namespace: atlassian
  name: crowd
  labels:
    app.kubernetes.io/instance: crowd

spec:
  selector:
    app: crowd
  ports:
  - port: 8095
    protocol: TCP
    targetPort: 8095
  type: ClusterIP
