10-atlassian/crowd/route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: atlassian
  name: crowd
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    app.kubernetes.io/instance: crowd

spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-gamehost
  routes:
    - match: Host(`apps.gamehost.fi`) && PathPrefix(`/crowd`)
      kind: Rule
      services:
        - name: crowd
          port: 8095
